feat: button effects

--- a/src/index.html
+++ b/src/index.html
@@ -26,11 +26,11 @@
            </div>
            <div class="slider-block__image-wrapper__bottom-content">
                <span class="slider-block__text">Train hard</span>
-               <div class="slider-block__buttons-wrapper">
-                   <div class="button-wrapper"><label for="switch1" class="button active"></label></div>
-                   <div class="button-wrapper"><label for="switch2" class="button"></label></div>
-                   <div class="button-wrapper"><label for="switch3" class="button"></label></div>
-                   <div class="button-wrapper"><label for="switch4" class="button"></label></div>
+               <div id="active" class="slider-block__buttons-wrapper">
+                   <label for="switch1" class="button-wrapper"><label for="switch1" class="button"></label></label>
+                   <label for="switch2" class="button-wrapper"><label for="switch2" class="button"></label></label>
+                   <label for="switch3" class="button-wrapper"><label for="switch3" class="button"></label></label>
+                   <label for="switch4" class="button-wrapper"><label for="switch4" class="button"></label></label>
                </div>
            </div>
        </div>
