fix: text appearance

--- a/src/index.html
+++ b/src/index.html
@@ -24,14 +24,19 @@
                    </div>
                </div>
            </div>
-           <div class="slider-block__image-wrapper__bottom-content">
-               <span class="slider-block__text">Train hard</span>
-               <div id="active" class="slider-block__buttons-wrapper">
-                   <label for="switch1" class="button-wrapper"><label for="switch1" class="button"></label></label>
-                   <label for="switch2" class="button-wrapper"><label for="switch2" class="button"></label></label>
-                   <label for="switch3" class="button-wrapper"><label for="switch3" class="button"></label></label>
-                   <label for="switch4" class="button-wrapper"><label for="switch4" class="button"></label></label>
+           <div id='text'>
+               <div class="text">
+                   <span class="slider-block__text">Train hard</span>
+                   <span class="slider-block__text">The most beautiful girl on the planet</span>
+                   <span class="slider-block__text">Ka-Chow</span>
+                   <span class="slider-block__text">Number matters</span>
                </div>
+           </div>
+           <div id="active" class="slider-block__buttons-wrapper">
+               <label for="switch1"></label>
+               <label for="switch2"></label>
+               <label for="switch3"></label>
+               <label for="switch4"></label>
            </div>
        </div>
    </div>
